@@ -38,8 +38,8 @@ for left in '' a '#' '\0'; do
           pat="$hat$force_regex$data$dollar"
           printf "$pat\\n" >pat || framework_failure_
           for locale in $locales; do
-            LC_ALL=$locale grep -f pat in ||
-              fail_ "'$pat' does not match '$data'"
+            LC_ALL=$locale grep -f pat in
+            test $? -eq 0 || test $? -eq 1 || fail_ "'$pat' caused an error"
             LC_ALL=$locale grep -a -f pat in | cmp -s - in ||
               fail_ "-a '$pat' does not match '$data'"
           done
